--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <button class="push plus" type="button">+</button>
               </div>
               <label for="сhildren"><span class="childron-h">Дети:</span></label>
-              <div class="arrival-person-wrapper">
+              <div class="arrival-person-wrapper secondy">
                 <button class="push minus" type="button">−</button>
                 <input id="сhildren" class="persons-amount" type="text" name="children" placeholder="0">
                 <button class="push plus" type="button">+</button>
