--- a/inner.html
+++ b/inner.html
@@ -133,9 +133,9 @@
           </div>
           <div class="hotel-rating">
             <div class="stars">
-              <span class="star">1</span>
-              <span class="star">2</span>
-              <span class="star">3</span>
+              <span class="star super">1</span>
+              <span class="star super">2</span>
+              <span class="star super">3</span>
             </div>
             <div class="rating-text">Рейтинг: 8,9</div>
           </div>
@@ -154,8 +154,8 @@
           </div>
           <div class="hotel-rating">
             <div class="stars">
-              <span class="star">1</span>
-              <span class="star">2</span>
+              <span class="star two">1</span>
+              <span class="star two">2</span>
             </div>
             <div class="rating-text">Рейтинг: 9,2</div>
           </div>
